Make use of new Get Snapshots Filtering in SLM Retention
We can save ourselves the trouble of even looking at snapshots that don't have a relevant
policy on the SLM side now.